--- a/package.json
+++ b/package.json
@@ -40,11 +40,13 @@
   "dependencies": {
     "bluebird": "^3.4.1",
     "cli-table": "^0.3.1",
+    "csvtojson": "^1.1.9",
     "dotenv": "^4.0.0",
     "fs-extra": "^0.18.2",
     "inquirer": "^3.1.1",
     "ip": "^1.1.5",
     "js-yaml": "^3.4.6",
+    "jsonexport": "^2.0.11",
     "jsonfile": "^2.4.0",
     "lodash": "^4.15.0",
     "node-cache": "^4.1.1",
