--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "trill",
   "description": "Trillin' out all the dizzles!",
   "license": "GPLv3",
-  "version": "1.0.0-beta.0",
+  "version": "1.0.0-alpha.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/thinktandem/trill"
